bpo-42266: Handle monkey-patching descriptors in LOAD_ATTR cache (GH-23157)